# sdl2

./: BUILD.bazel
src/audio/: BUILD.bazel
src/haptic/: BUILD.bazel
src/libm/: math_libm.h
src/loadso/: BUILD.bazel
src/main/: BUILD.bazel
src/power/: BUILD.bazel
src/render/: BUILD.bazel
src/render/software/: SDL_draw.h
src/thread/: BUILD.bazel
src/timer/: BUILD.bazel
src/video/: BUILD.bazel
src/video/x11/: BUILD
src/video/yuv2rgb/: BUILD
