cc_library(
	name = "audio",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = ["//:SDL2internal"] + select({
		"//:windows": [
			"//src/audio/disk",
			"//src/audio/dummy",
			"//src/audio/wasapi",
			"//src/audio/directsound",
			"//src/audio/winmm:SDL_winmm",
		],
		"//conditions:default": [
			"//src/audio/dummy",
			"//src/audio/pulseaudio",
			"//src/audio/alsa",
			# "//src/audio/disk",
			# "//src/audio/jack",
			# "//src/audio/esd",
			# "//src/audio/arts",
			# "//src/audio/nas",
			# "//src/audio/sndio",
			# "//src/audio/fusionsound",
		],
	}),
	visibility = ["//visibility:public"],
)
