cc_library(
	name = "video",
	hdrs = glob(["*.h"]),
	srcs = glob(["*.c"]),
	deps = ["//:SDL2internal"] + select({
		"//:windows": [
			"//src/video/dummy",
			"//src/video/windows",
			"//src/video/khronos",
			"//src/video/yuv2rgb",
		],
    "//conditions:default": [
			"//src/video/dummy",
			"//src/video/x11",
			"//src/video/khronos",
			"//src/video/yuv2rgb",
    ],
	}),
	visibility = ["//visibility:public"],
)
